# fx-cli

./: .env.example  .gitignore  README.md  pyproject.toml
fx_cli/: __init__.py  api.py  cli.py
